--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
     <title>Workout App</title>
 </head>
 <body>
@@ -13,8 +12,14 @@
         <div id="exercise-container">
             <!-- Exercise content will be displayed here -->
         </div>
-        <button id="startButton">Start Workout</button>
-        <button id="nextButton" style="display: none;">Next Exercise</button>
+        <div id="input-container">
+            <label for="weight">Weight (lbs): </label>
+            <input type="number" id="weight" min="0" value="0">
+
+            <label for="reps">Reps: </label>
+            <input type="number" id="reps" min="0" value="0">
+        </div>
+        <button id="recordButton">Record Stats</button>
     </div>
 
     <script src="script.js"></script>
